tests/negative/neg_pr1162_removed_declare.safe
package neg_pr1162_removed_declare

   function build returns integer

      declare
         temp : integer = 1
      begin
         return temp
      end
